--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-ui": "^2.15.9",
+    "vue": "^3.2.13",
+    "vue-flux": "^5.1.9",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vicons/material": "^0.12.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "naive-ui": "^2.31.0",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0"
   },
   "eslintConfig": {
     "root": true,
