--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "photoswipe": "^5.3.3",
     "vue": "^3.2.13",
-    "vue-flux": "^5.1.9",
     "vue-router": "^4.1.2",
     "vue3-picture-swipe": "^3.0.6"
   },
@@ -21,9 +20,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^7.0.3",
-    "sass-loader": "^13.1.0"
+    "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
     "root": true,
