--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
+    "core-js": "^3.8.3",
     "photoswipe": "^5.3.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.2",
-    "vue3-picture-swipe": "^3.0.6"
+    "vue-flux": "^5.1.9",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
